--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.2.0",
     "@nextui-org/react": "^2.2.9",
     "@types/mapbox-gl": "^2.7.20",
     "framer-motion": "^11.0.3",
