feat: spring models updated

--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 
+spring.data.mongodb.uri=mongodb+srv://camiloesteban661:wXqv1gBz0FkPbxWI@cluster0.jqqlzya.mongodb.net/radial
+# spring.data.mongodb.database=radial
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
