--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -20,9 +20,15 @@ dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 		implementation 'org.springframework.boot:spring-boot-starter-validation'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
+		implementation 'org.springframework.security:spring-security-crypto:6.2.2'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
+		implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
+		runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+		runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
