--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.2.9",
     "@types/mapbox-gl": "^2.7.20",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.3",
     "mapbox-gl": "^3.1.2",
     "next-themes": "^0.2.1",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-jwt": "^1.2.1",
     "react-router-dom": "^6.22.1",
     "zustand": "^4.5.0"
   },
