--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.2.9",
     "@types/mapbox-gl": "^2.7.20",
     "axios": "^1.6.8",
+    "clipboard-polyfill": "^4.1.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.0.3",
     "mapbox-gl": "^3.1.2",
